Fix: fixed the Members description alignment

--- a/src/components/Member/style.scss
+++ b/src/components/Member/style.scss
@@ -53,7 +53,7 @@
             font-size: clamp(0.8rem, 2vw, 1.1rem);
         }
         @media (min-width: 1441px) {
-            font-size: clamp(0.8rem, 3vw, 1.55rem);
+            font-size: clamp(0.8rem, 3vw, 1.4rem);
         }
     }
 
@@ -63,6 +63,7 @@
     }
 
     p {
+        width: 100%;
         color: $White;
         margin-bottom: 1.8vw;
     }
